# crypto-daily-mailer

./: Dockerfile  app.py  config.py  emailer.py  pyproject.toml  render.py  scraper.py  tickers.json
.github/workflows/: daily.yml
