[project]
name = "crypto-daily-mailer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "fastapi>=0.118.0",
    "lxml>=6.0.2",
    "pandas>=2.3.3",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "uvicorn>=0.37.0",
]
